# menu-matching

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  docker-exec-scripts.md  init.sql  pyproject.toml  pytest.ini
data/: sample_menus.csv  training_data.txt
frontend/: README.md  index.html  package.json
frontend/src/: App.jsx  theme.js
frontend/src/api/: client.js
frontend/src/components/: MatchedMenusView.jsx  MenuMatchingDialog.jsx  RestaurantDetail.jsx  RestaurantList.jsx  StandardMenuManager.jsx
src/: manage.py
src/apps/menus/: admin.py  apps.py  models.py  services.py
src/apps/menus/api/: __init__.py  serializers.py  urls.py  views.py
src/apps/menus/migrations/: 0001_initial.py  0002_remove_restaurant_code_require_restaurant.py
src/apps/menus/tests/: test_api.py  test_matching.py  test_models.py
src/apps/nlp/: apps.py  tests.py
src/apps/nlp/management/commands/: train_fasttext.py
src/apps/nlp/services/: __init__.py  fasttext_matcher.py  mecab_analyzer.py  normalizer.py  training_utils.py
src/config/: settings.py  urls.py
src/scripts/: create_sample_data.py
